--- a/horabella/Login.storyboard
+++ b/horabella/Login.storyboard
@@ -25,7 +25,7 @@
                                     <constraint firstAttribute="height" constant="30" id="p5C-vM-Opc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="je6-L0-qIf">
                                 <rect key="frame" x="20" y="355" width="560" height="30"/>
@@ -58,7 +58,7 @@
                                     <constraint firstAttribute="height" constant="30" id="BdE-gs-LuD"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
                             </textField>
                         </subviews>
                         <animations/>
